working on new feature

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@
 #filterFormInput{
     margin-left: 10px;
 }
+
+.multiple-file-form {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/* .button-spacing {
+    margin-top: 30px;
+} */
